2006-03-04  Tom Tromey  <tromey@redhat.com>

	* java/beans/PropertyDescriptor.java (createPropertyEditor): New
	method.
	(findConstructor): Likewise.
	(instantiateClass): Likewise.

2006-03-04  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* gnu/java/rmi/dgc/DGCImpl.java:  More comments, boilerplate fix.
	(dirty): Do not synchronize on Hashtable. Use the passed (requested) 
	lease value and not always the default one.
 	(LeaseRecord): Remember the array of objects, marked as dirty.
 	java/rmi/dgc/Lease.java: Boilerplate fix.

2006-03-05  Raif S. Naffah  <raif@swiftdsl.com.au>

	* java/util/jar/Attributes.java (putValue): Made it public and updated
	method documentation.

2006-03-04  Mark Wielaard  <mark@klomp.org>

	* java/awt/Container.java (remove(int)): Always call removeNotify()
	on removed Component.

2006-03-04  Mark Wielaard  <mark@klomp.org>

	Fixes bug #26460 reported by Beat Wolf <asraniel@fryx.ch>.
	* javax/swing/JEditorPane.java (setText): Check for empty String
	with equals(), not equality (==).

2006-03-04  Mark Wielaard  <mark@klomp.org>

	* javax/swing/text/html/HTMLDocument.java: Qualify ElementSpec as
	DefaultStyledDocument.ElementSpec for gcj 4.0.x.

2006-03-04  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/text/GapContent.java
	(getArray): Mark as final.

2006-03-04  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/text/StyleConstants.java
	(CharacterConstants.Background): Marked final,
	(CharacterConstants.BidiLevel): Likewise,
	(CharacterConstants.Bold): Likewise,
	(CharacterConstants.ComponentAttribute): Likewise,
	(CharacterConstants.Family): Likewise,
	(CharacterConstants.Size): Likewise,
	(CharacterConstants.Foreground): Likewise,
	(CharacterConstants.IconAttribute): Likewise,
	(CharacterConstants.Italic): Likewise,
	(CharacterConstants.StrikeThrough): Likewise,
	(CharacterConstants.Subscript): Likewise,
	(CharacterConstants.Superscript): Likewise,
	(CharacterConstants.Underline): Likewise,