@@ -1,3 +1,9 @@
+2006-03-04  Mark Wielaard  <mark@klomp.org>
+
+	* gnu/xml/stream/SAXParser.java (parse(InputSource)): Ignore
+	exceptions thrown by handlers while cleaning up and rethrow original
+	exception.
+
 2006-03-04  Tom Tromey  <tromey@redhat.com>
 
 	* java/beans/PropertyDescriptor.java (createPropertyEditor): New
